# genlogs-demo

./: .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
api/: README.md  pyproject.toml
api/app/: main.py
api/app/api/v1/: carriers.py
api/app/constants/: carrier_constants.py
api/app/controllers/: carrier_controller.py
api/app/managers/: carrier_manager.py
api/app/models/: carrier_model.py
api/tests/: test_carrier_controller.py  test_carrier_manager.py  test_carriers_api.py
frontend/: .gitignore  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
frontend/src/: App.css  App.tsx  index.css  setupTests.ts  vite-env.d.ts
frontend/src/components/: App.test.tsx  CarrierDetail.test.tsx  CarrierDetail.tsx  CarrierList.test.tsx  CarrierList.tsx  MapDisplay.test.tsx  MapDisplay.tsx  SearchForm.test.tsx  SearchForm.tsx  SearchResults.test.tsx  SearchResults.tsx  TruckList.test.tsx  TruckList.tsx
frontend/src/constants/: apiRoutes.ts  mapConstants.test.ts  mapConstants.ts
frontend/src/interfaces/: Carrier.ts
frontend/src/lib/: utils.test.ts
frontend/src/services/: carrierService.test.ts  carrierService.ts  routeService.test.ts  routeService.ts
infra/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
